  * lib/msg.c (msg_primitive): Write the period before the newline, not after!
  * tests/0022.{out,err,fails}: New test case, for grep-dctrl
    --ignore-parse-errors
  * tester.sh: Handle missing diffs gracefully.
  * lib/fsaf.c and others: Remove mmap support (recognize but ignore --mmap).
    It was only complicating matters without giving much benefit.

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sat, 09 Jun 2012 00:07:04 +0300

dctrl-tools (2.22.2) unstable; urgency=low

  * Closes: #674836 (Builds with wrong CFLAGS), reported by me:
     - Upgrade debhelper mode to 9.
     - Work around debhelper bug 674912 by defining the default CFLAGS
       using ?= in GNUmakefile.
     - As pointed out by Jonathan Nieder in private mail, -Werror is not
       a good idea in package builds (it may cause unnecessary FTBFS
       breakage in the future as the toolchain and libraries change).

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Thu, 07 Jun 2012 11:48:25 +0300

dctrl-tools (2.22.1) unstable; urgency=low

  [ Program translations ]
  * Swedish, by Martin Bagge (closes: #673870)
  * Portuguese (new), by Pedro Ribeiro (closes: #674637)

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sun, 27 May 2012 20:53:25 +0300

dctrl-tools (2.22) unstable; urgency=low

  * Team upload.

  [ Antti-Juhani Kaijanaho ]
  * debian/copyright: Upgraded to copyright-format/1.0, and updated.
  * grep-dctrl: Allow distributing atom modifiers over a parenthesed predicate.
    Closes: #319760 (allow -F modifiers to apply to an entire expression)
    Reported by Enrico Zini <enrico@debian.org>
  
  [ Program translations ]
  * Indonesian (new), by Andika Triwidada.
  * Vietnamese, by Nguyen Vu Hung.

  [ Documentation translations ]
  * German, by Chris Leick (closes: #671597).
  * French, by David Prévot.

 -- David Prévot <taffit@debian.org>  Sun, 13 May 2012 16:29:22 -0400

dctrl-tools (2.21.1) unstable; urgency=low

  * grep-dctrl: Remove the old dead annoying banner code.